[package]
name = "net_interceptor"
version = "0.1.0"
authors = ["Christian Buehlmann <christian.buehlmann@scs.ch>"]
description = "The swiss army knife of network interception"
homepage = "https://github.com/cbuehlmann/net-interceptor"
repository = "https://github.com/cbuehlmann/net-interceptor"
readme = "README.md"
keywords = ["proxy", "tcp", "udp", "networking", "interception"]
categories = ["command-line-utilities", "network-programming", "proxy"]

[dependencies]
log = "0.3"
log4rs = "0.7"
futures = "0.1"
getopts = "0.2"
rand = "0.3"
net2 = "0.2"
tokio-core = "0.1"
tokio-io = "0.1"
ns-dns-tokio = "0.3"
abstract-ns = "0.3"
